add asciinema